--- a/hw3_calculator_using_tokens/makefile
+++ b/hw3_calculator_using_tokens/makefile
@@ -1,10 +1,10 @@
 OBJ = parser.o main.o
 main:$(OBJ)
-	g++ -g -o cal $(OBJ)
+	g++ -Wall -g -o cal $(OBJ)
 parser.o: parser.cpp parser.h
-	g++ -g -c parser.cpp
+	g++ -Wall -g -c parser.cpp
 main.o: main.cpp parser.h
-	g++ -g -c main.cpp
+	g++ -Wall -g -c main.cpp
 
 clean:
 	-rm -f cal $(OBJ)
